# LL

./: .gitignore  ADMIN_MENU_AND_SETTINGS_FIX.md  ALL_FIXES_COMPLETE.md  CALENDAR_INTEGRATION_ROADMAP.md  CLEANUP_SUMMARY.md  COMPLETE_FIX_SUMMARY.md  CONNECTIVITY_RESTORATION_SUMMARY.md  CREATE_MYSQL_USER_INSTRUCTIONS.md  CREATE_NEW_MYSQL_USER.md  DARK_MODE_FIX_PLAN.md  DATABASE_SCHEMA.md  DATABASE_SCHEMA_FIXES_COMPLETE.md  DATABASE_SETUP_INSTRUCTIONS.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENTERPRISE_FEATURES_PROGRESS.md  FINAL_FIXES_COMPLETE.md  FIXES_SUMMARY.md  FIX_SUMMARY.md  IMPORT_AND_ADMIN_FIXES.md  MYSQL_PASSWORD_HELP.md  NEXT_SESSION_PLAN.md  PRIORITY_1_FEATURES_COMPLETE.md  PRIORITY_2_FEATURES_COMPLETE.md  PRIORITY_3_LEGENDARY_FEATURES.md  Prompt.txt  QUICK_DATABASE_SETUP.md  README.md  SECURITY.md  SECURITY_IMPROVEMENTS.md  SESSION_COMPLETE.md  SESSION_FIXES_COMPLETE.md  SESSION_SUMMARY.md  TEMPLATE_FIX_COMPLETE.md  UI_IMPROVEMENTS_IMPLEMENTED.md  UI_UX_DOMINATION_PLAN.md  ULTRATHINK_MASTER_PLAN.md  ULTRATHINK_PROGRESS.md  USERNAME_SUPPORT_ADDED.md  check_database_tables.sql  (+7 more)
backend/: .env.example  .env.production  .htaccess  AI_INSIGHTS_GUIDE.md  Dockerfile  LINKEDIN_INTEGRATION_OPTIONS.md  LINKEDIN_OAUTH_SETUP.md  PROFESSIONAL_CRM_IMPLEMENTATION.md  README.md  SETUP_SECURITY.md  api_endpoint_analysis_report.md  check_packages.py  clean_files.py  clear_cache.sh  create_team_invitations_table.sql  database_health_check.py  deploy_plesk.sh  encrypt_existing_messages.py  fix_tokens.py  gunicorn_config.py  leadlab.service  leadlabv2_2025-06-10_13-56-23.sql  main.py  package-lock.json  package.json  passenger_wsgi.py  password_fix.py  professional_features.sql  pyproject.toml  requirements.txt  restart_with_gunicorn.sh  run_import.py  setup_pro_features.sql  setup_professional_features.sql  simple_auth_test.py  simple_test_server.py  tailwind.config.js  template.csv  test_api_linkedin.py  test_db.py  (+7 more)
backend/app/: database.py  seed.py
backend/migrations/: add_data_import_export.sql  add_email_guidelines_to_leads.sql  add_enterprise_features.sql  add_professional_features.sql  add_sales_intelligence_to_leads.sql  add_username_simple.sql  create_marketing_form_submissions.sql  fix_activities_sequence.sql  fix_email_provider_type_case.sql  fix_organizations_sequence.sql
backend/nginx/: api.the-leadlab.com.conf  the-leadlab.com.conf  vhost_nginx.conf
(+809 files in other folders)
