[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "leadlab-backend"
description = "Lead management system backend"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
dependencies = [
    # FastAPI ve ilgili paketler
    "fastapi==0.109.2",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.5.1",
    "pydantic-settings==2.1.0",
    "email-validator==2.1.0.post1",
    
    # Veritabanı
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "pymysql==1.1.0",
    
    # ML ve Veri Analizi
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "joblib==1.3.2",
    "lightgbm==4.1.0",
    "category-encoders==2.6.3",
    "feature-engine==1.6.2",
    "optuna==3.4.0",
    
    # HTTP İstemcisi
    "httpx==0.25.1",
    "requests==2.31.0",
    
    # Cache ve Performans
    "redis==5.0.1",
    "prometheus-client==0.19.0",
    "sentry-sdk==1.35.0",
    
    # Güvenlik
    "python-dotenv==1.0.0",
    "bcrypt==4.0.1",
    "cryptography==41.0.7",
    
    # Monitoring
    "psutil>=5.9.5",
    
    # Araçlar
    "PyJWT==2.8.0",
    "aiohttp==3.9.1",
    "pdfkit==1.0.0",
    "jinja2==3.1.2",
    "weasyprint==60.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "flake8==6.1.0",
    "mypy==1.7.0",
    "isort==5.12.0",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
] 